--- a/assets/css/swift.css
+++ b/assets/css/swift.css
@@ -1,5 +1,4 @@
 @import url(font-awesome.min.css);
-@import url("https://fonts.googleapis.com/css?family=Pacifico|Source+Sans+Pro:200,400");
 
 * {
     margin: 0;
@@ -18,9 +17,13 @@
     background-color: rgb(29, 29, 29);
     color: var(--content-color);
     line-height: 1.5;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
   }
   
   #content {
+    flex: 1;
     width: var(--content-width);
     text-align: left;
     margin: 0 auto;
@@ -132,7 +135,7 @@
   
   /* Description styles */
   .description {
-    flex: 1; /* Take up remaining space */
+    margin: 0; 
   }
   
   /* Bullet list styles */
@@ -143,12 +146,10 @@
   
   /* Screenshot styles */
   .screenshot {
-    flex-shrink: 0; /* Do not allow the screenshot to shrink */
-    margin-left: auto; /* Push the image to the right */
-  }
-
-  .screenshot img {
-    width: auto; /* Set the width of the screenshot image relative to its container */
+    /* flex-shrink: 0; /* Do not allow the screenshot to shrink */
+    /* margin-left: auto; /* Push the image to the right */
+    float: right;
+    max-width: 15em;
     height: 25em; /* Relative to the image size */
     margin-left: 20px;
     margin-bottom: 10px;
@@ -157,15 +158,15 @@
 .image-container {
   display: flex;
   flex-direction: column;
-  align-items: center
+  align-items: center;
 }
+
 
 
 /* Footer */
 #footer {
   text-align: center; /* alignment of the whole footer */
-  margin: auto;
-  width: var(--content-width);
+  width: 100%;
   font-family: FontAwesome;
   font-style: normal;
   font-weight: normal;
@@ -204,4 +205,9 @@ ul.icons li:last-child {
 
 .icon > .label {
   display: none; /* Removes the text of hyperlinks */
+}
+
+.phone-image {
+  float: right;
+  max-width: 15em;
 }
