--- a/assets/css/swift.css
+++ b/assets/css/swift.css
@@ -8,7 +8,8 @@
   }
   
   :root {
-    --content-width: 30%;
+    --content-width: 700px;
+    --content-min-width: 500px;
     --content-color: #ffffff;
   }
   
@@ -21,7 +22,8 @@
   }
   
   #content {
-    width: var(--content-width);
+    max-width: var(--content-width);
+    min-width: v(--content-min-width);
     text-align: left;
     margin: 0 auto;
     margin-top: 20px;
@@ -51,7 +53,8 @@
   }
   
   #banner .inner {
-    width: var(--content-width);
+    max-width: var(--content-width);
+    min-width: v(--content-min-width);
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -93,7 +96,7 @@
   hr {
     border: none;
     border-top: 1px solid #b6b6b6;
-    width: var(--content-width);
+    max-width: var(--content-width);
     margin: 0 auto;
   }
   
@@ -111,7 +114,8 @@
 
 /* App container styles */
 .app-container {
-    width: var(--content-width);
+    max-width: var(--content-width);
+    min-width: v(--content-min-width);
     margin: 0 auto;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -165,7 +169,8 @@
 #footer {
   text-align: center; /* alignment of the whole footer */
   margin: auto;
-  width: var(--content-width);
+  max-width: var(--content-width);
+  min-width: v(--content-min-width);
   font-family: FontAwesome;
   font-style: normal;
   font-weight: normal;
@@ -204,4 +209,12 @@ ul.icons li:last-child {
 
 .icon > .label {
   display: none; /* Removes the text of hyperlinks */
+}
+
+/* Media query for mobile devices */
+@media screen and (max-width: 767px) {
+  :root {
+    /* Override max-width for mobile devices */
+    --content-width: 100%;
+  }
 }
