--- a/assets/css/swift.css
+++ b/assets/css/swift.css
@@ -217,7 +217,7 @@ ul.icons li:last-child {
 
 /* Media query for mobile devices */
 @media screen and (max-width: 800px) {
-  .root {
+  :root {
     max-width: -webkit-calc(800px - (30px));
     max-width: calc(800px - (30px));
   }
