Adding a System-Wide Git Logger on macOS

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@import url("../fonts/font-awesome.min.css");
 @font-face {
   font-family: "PT Sans";
   src: local("PT Sans"), local("PTSans-Regular"), url("../fonts/PTSans-Regular.woff") format("woff");
@@ -20,8 +21,8 @@ html {
 
 body {
   background: #ffffff;
-  color: #212228;
-  font-family: "PT Sans", -apple-system, "Helvetica Neue", "Segoe UI", "Roboto", sans-serif;
+  color: #282123;
+  font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-weight: 400;
   line-height: 1.6;
   margin: 0;
@@ -111,9 +112,9 @@ tr:hover, tr:nth-child(odd) td {
 pre {
   background: rgba(144, 145, 148, 0.12);
   border-radius: 2px;
-  font-size: 0.8em;
+  font-size: 0.7em;
   margin: 1.5em 0;
-  padding: 0.8em 1.2em;
+  padding: 1.8em 1.2em;
   overflow-x: auto;
 }
 
@@ -144,7 +145,6 @@ article header {
 }
 
 article header h1 {
-  font-size: 1.7em;
   margin: 0 0 0.1em;
 }
 
@@ -158,7 +158,7 @@ nav a {
 
 @media (prefers-color-scheme: dark) {
   html, body, body > header, body > footer {
-    background: #212228;
+    background: rgb(29, 29, 29);
     color: #ffffff;
     box-shadow: 0 0 0 1px #33353e;
   }
@@ -192,13 +192,22 @@ nav a {
 }
 
 .archive {
-  font-size: 1.1em;
+  list-style: none;
+  padding: 0;
 }
 
 .archive time {
   display: inline-block;
   min-width: 10ch;
-  margin: 0 0.2em;
+  font-size: 0.7em;
+  color: darkgrey;
+}
+
+.archive description {
+  margin-top: 15px;
+  display: block;
+  font-size: 0.9em;
+  color: #909194;
 }
 
 .highlight pre {
